# carver

./: .gitignore  Cargo.toml  readme.md  todo.md
carver/: main.py  note.py
carver/carver/: cam.py  helpers.py  jobs.py
src/: app_state.rs  cam_job.rs  errors.rs  main.rs  main.rs.old  prelude.rs  stl_operations.rs  tool.rs  types.rs
src/tasks/: circular_clearing.rs  contourtrace.rs  cylindrical_clearing.rs  mod.rs  multicontourtrace.rs
