[package]
name = "watch-stl"
version = "0.1.2"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"

[dependencies]
stl_io = "0.7.0"
kiss3d = {version="0.35.0", features = ["conrod"]}
notify = "5.1.0"
thiserror="1"
ncollide3d = "0.33"
marching-cubes = { git = "https://github.com/NWalker4483/marching-cubes" }
anyhow = "1.0.69"
[dev-dependencies]
anyhow = "1.0.69"
